# binaryrpc-framework

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  RoadMap.md  et --hard 172cd8e  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
example_server/: CMakeLists.txt  basic_chat.cpp
example_server/utils/: parser.hpp
include/binaryrpc/: binaryrpc.hpp
include/binaryrpc/core/: app.hpp  framework_api.hpp  types.hpp
include/binaryrpc/core/auth/: ClientIdentity.hpp
include/binaryrpc/core/interfaces/: IBackoffStrategy.hpp  IHandshakeInspector.hpp  iplugin.hpp  iprotocol.hpp  itransport.hpp
include/binaryrpc/core/middleware/: middleware_chain.hpp
include/binaryrpc/core/protocol/: msgpack_protocol.hpp  simple_text_protocol.hpp
include/binaryrpc/core/qos/: duplicate_filter.hpp
include/binaryrpc/core/rpc/: rpc_context.hpp  rpc_manager.hpp
include/binaryrpc/core/session/: generic_index.hpp  session.hpp  session_manager.hpp
include/binaryrpc/core/strategies/: exponential_backoff.hpp  linear_backoff.hpp
include/binaryrpc/core/util/: DefaultInspector.hpp  conn_state.hpp  error_types.hpp  hex.hpp  logger.hpp  qos.hpp  random.hpp  thread_pool.hpp  time.hpp
include/binaryrpc/middlewares/: jwt_auth.hpp  rate_limiter.hpp
include/binaryrpc/plugins/: reliable_plugins.xpp  room_plugin.hpp
include/binaryrpc/transports/websocket/: websocket_transport.hpp
src/core/: app.cpp  framework_api.cpp
src/core/middleware/: middleware_chain.cpp
src/core/protocol/: msgpack_protocol.cpp  simple_text_protocol.cpp
src/core/rpc/: rpc_context.cpp  rpc_manager.cpp
src/core/session/: generic_index.cpp  session.cpp  session_manager.cpp
src/core/util/: DefaultInspector.cpp  thread_pool.cpp
src/internal/core/middleware/: middleware_chain.hpp
src/internal/core/rpc/: rpc_manager.hpp
src/internal/core/session/: generic_index.hpp  session_manager.hpp
src/internal/core/util/: byteorder.hpp  conn_state.hpp
src/plugins/: room_plugin.cpp
src/transports/websocket/: websocket_transport.cpp
test_server/: advanced_general_server.cpp  error_propagation_test.cpp  main.cpp  middleware_test.cpp  qos1_test.cpp  qos2_test.cpp  session_test.cpp
tests/: CMakeLists.txt  catch2_main.cpp  generic_index.test.cpp  middleware_chain.test.cpp  mock_client.cpp  mock_client.hpp  protocol.test.cpp  qos.test.cpp  qos_mock_transport.hpp  rate_limiter.test.cpp  session_manager.test.cpp
tests/integration_tests_py/Concurrency_and_multiple_clients/: app.py
tests/integration_tests_py/e2e/: ws_e2e_test.py
tests/integration_tests_py/error_propagation/: app.py
tests/integration_tests_py/general/: advanced_app.py
tests/integration_tests_py/middleware/: app.py
tests/integration_tests_py/qos_tests/: pytest.ini  qos1.py  qos2.py
tests/integration_tests_py/session/: advanced_app.py  app.py
vcpkg-overlays/folly/: fix-dont-inherit-cpp-version.patch
